Bug 103530 - FILEOPEN: OOXML .xlsx external references in named expressions not handled
Summary: FILEOPEN: OOXML .xlsx external references in named expressions not handled
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Eike Rathke (retired, only occasionally showing up)
URL: https://www.dropbox.com/s/rchb1qezq8d...
Whiteboard: target:5.3.0 target:5.2.4
Keywords:
Depends on:
Blocks:
 
Reported: 2016-10-27 09:02 UTC by Eike Rathke (retired, only occasionally showing up)
Modified: 2016-10-28 16:37 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Eike Rathke (retired, only occasionally showing up) 2016-10-27 09:02:46 UTC
From https://ask.libreoffice.org/en/question/80419/saving-xlsx-file-causes-corruption/

When loading the original 'Before' file during compilation of the named expressions/ranges the external links mapping is not available, so in '[1]BLT Use Only'!$B$1:$B$32 the ID 1 of [1] is not resolved to a known external, hence the resulting file name '1' (prepended with the document's location path) that makes no sense in this context.
Comment 1 Commit Notification 2016-10-27 10:08:57 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e641c1740f36ce11c9f178193f74a53ac7af8465

Resolves: tdf#103530 OOXML: pass ExternalLinkInfo compiling named expressions

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Eike Rathke (retired, only occasionally showing up) 2016-10-27 10:11:58 UTC
Pending review https://gerrit.libreoffice.org/30321 for 5-2
Comment 3 Commit Notification 2016-10-28 16:37:06 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "libreoffice-5-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=ce118a11f14250ffc5fc625ae9a84ad12b28c62b&h=libreoffice-5-2

Resolves: tdf#103530 OOXML: pass ExternalLinkInfo compiling named expressions

It will be available in 5.2.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.