Resolves: tdf#103530 OOXML: pass ExternalLinkInfo compiling named expressions

Change-Id: If15aa520b93f30b889e5f950185068ef3bdb9235
(cherry picked from commit e641c1740f36ce11c9f178193f74a53ac7af8465)
Reviewed-on: https://gerrit.libreoffice.org/30321
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Markus Mohrhard <markus.mohrhard@googlemail.com>
(cherry picked from commit ce118a11f14250ffc5fc625ae9a84ad12b28c62b)